#554860 z-index fixed

--- a/openlayers.css
+++ b/openlayers.css
@@ -12,6 +12,7 @@
 
 .openlayers-map {
   z-index:0;
+  position:relative;
 }
 
 
